--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: ease-in-out 2s;
 }
 .ex-3-square {
     width: 100px;
@@ -71,5 +72,10 @@
 
 .ex-1-square:hover {
     background-color: red;
+    transition: 2s;
+}
+
+.ex-2-square:active {
+    width: 100%;
     transition: 2s;
 }
