--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: ease-in-out .5s;
 }
 .ex-4-square {
     width: 100px;
@@ -78,4 +79,9 @@
 .ex-2-square:active {
     width: 100%;
     transition: 2s;
+}
+
+.ex-3-square:hover {
+    border-radius: 50%;
+    transition: .5s;
 }
