--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: ease-out .5s;
 }
 .ex-5-square {
     margin: 20px;
@@ -84,4 +85,9 @@
 .ex-3-square:hover {
     border-radius: 50%;
     transition: .5s;
+}
+
+.ex-4-square:hover {
+    background: none;
+    transition: 1s;
 }
