--- a/style.css
+++ b/style.css
@@ -32,7 +32,9 @@
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
-
+.ex-7-img {
+    transition: ease-out 1s;
+}
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
@@ -104,3 +106,9 @@
 .ex-6-img:hover {
     filter: grayscale(1);
 }
+
+.ex-7-img:hover {
+    filter: grayscale(1);
+    transition: 1s;
+}
+
