--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@
 .ex-7-img {
     transition: ease-out 1s;
 }
+.ex-8-img {
+    transition: ease-out 2s;
+}
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
@@ -110,5 +113,11 @@
 .ex-7-img:hover {
     filter: grayscale(1);
     transition: 1s;
+}
+
+.ex-8-img:hover {
+    filter: grayscale(40%) sepia(60%);
+    transition: 3s;
+    border-radius: 5%;
 }
 
