--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@
 }
 .ex-10-icon {
     font-size: 60px;
+    animation-name: ruota;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 .ex-11-icon {
     font-size: 60px;
@@ -131,3 +135,8 @@
     margin: 0;
 }
 
+@keyframes ruota {
+    0% {
+        transform: rotate(1turn);
+    }
+}
